@@ -1,22 +1,24 @@
 .PHONY: checkout build build_all plone moono clean
 
+build_all: checkout scayt plone build moono image2
 
 checkout:
 	./checkout.sh
 
-build:
-	./build.sh
+scayt:
+	./scayt.sh
 
 plone:
 	./plone.sh
 
+build:
+	./build.sh
+
 moono:
 	./moono.sh
 
-scayt:
-	./scayt.sh
-
-build_all: checkout scayt plone build moono
+image2:
+	./image2.sh
 
 clean:
 	rm -rf ckeditor-dev download
