@@ -29,17 +29,15 @@ function check_plugin
         fi
 }
 
-check_plugin image2
 check_plugin widget
 check_plugin lineutils
 check_plugin wsc
 check_plugin scayt
 
-# add image2 plugin in build configuration
-# also add widget and lineutils plugins, they are image2 dependencies
-# so that it gets included in the distro
-sed -i '/image: 1,/aimage2: 1,' "${BUILD_CONFIG}"
-sed -i '/image2: 1,/awidget: 1,' "${BUILD_CONFIG}"
-sed -i '/widget: 1,/alineutils: 1,' "${BUILD_CONFIG}"
-sed -i '/lineutils: 1,/awsc: 1,' "${BUILD_CONFIG}"
+# add wsc and scayt plugins in build configuration
+# so that they get included in the distro
+# also add widget and lineutils plugins, image2 dependencies
+sed -i '/image: 1,/awsc: 1,' "${BUILD_CONFIG}"
 sed -i '/wsc: 1,/ascayt: 1,' "${BUILD_CONFIG}"
+sed -i '/scayt: 1,/awidget: 1,' "${BUILD_CONFIG}"
+sed -i '/widget: 1,/alineutils: 1,' "${BUILD_CONFIG}"
