@@ -15,7 +15,7 @@ fi
 if [[ ${CKEDITOR_VERSION} == 4.5* ]]; then
         SCAYT_VERSION=${CKEDITOR_VERSION}
 fi
-if [ -z ${SCAYT_VERSION+x} ]; then
+if [ -z "${SCAYT_VERSION+x}" ]; then
         echo "version of scayt plugin could not be computed"
         exit 1
 fi
@@ -29,7 +29,7 @@ fi
 if [[ ${CKEDITOR_VERSION} == 4.5* ]]; then
         WSC_VERSION=${CKEDITOR_VERSION}
 fi
-if [ -z ${WSC_VERSION+x} ]; then
+if [ -z "${WSC_VERSION+x}" ]; then
         echo "version of wsc plugin could not be computed"
         exit 1
 fi
